// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoPlayer renders correctly in full screen mode 1`] = `
<video
  className="player__video"
  controls={true}
  height="100%"
  muted={false}
  poster="img/midnight-special.jpg"
  width="100%"
>
  <source
    src="https://coverr.co/videos/norway-road-f0J1etTrcQ"
    type="video/mp4"
  />
  <source
    src="https://coverr.co/videos/morning-sunshine-Of9KYVXN1C"
    type="video/webm"
  />
</video>
`;

exports[`VideoPlayer renders correctly inside of a SmallMovieCard 1`] = `
<video
  className="player__video"
  controls={false}
  height="100%"
  muted={true}
  poster="img/midnight-special.jpg"
  width="100%"
>
  <source
    src="https://coverr.co/videos/norway-road-f0J1etTrcQ"
    type="video/mp4"
  />
  <source
    src="https://coverr.co/videos/morning-sunshine-Of9KYVXN1C"
    type="video/webm"
  />
</video>
`;
